2nd and 3rd problems done ✅

--- a/NLP/txt_representation/representationn.ipynb
+++ b/NLP/txt_representation/representationn.ipynb
@@ -470,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spell-check completed in 196.78 seconds\n",
+      "Spell-check completed in 198.43 seconds\n",
       "0    one of ﻿the other reviewers has mentioned that...\n",
       "1    a wonderful little production ﻿the filming tec...\n",
       "2    i thought this was a wonderful way to spend ti...\n",
@@ -615,8 +615,8 @@
     "\n",
     "nltk.download('punkt')\n",
     "\n",
-    "df['review'] = df['review'].apply(lambda x: word_tokenize(x))\n",
-    "\n",
+    "# Tokenize into words\n",
+    "df['review'] = df['review'].apply(lambda x: word_tokenize(str(x)))\n",
     "df.head()"
    ]
   },
@@ -639,12 +639,9 @@
    "source": [
     "# Remove stopwords\n",
     "from nltk.corpus import stopwords\n",
-    "import nltk\n",
-    "\n",
     "nltk.download('stopwords')\n",
     "stop_words = set(stopwords.words('english'))\n",
-    "\n",
-    "df['review'] = df['review'].apply(lambda x: ' '.join([word for word in x if word not in stop_words]))"
+    "df['review'] = df['review'].apply(lambda x: [word for word in x if word not in stop_words])"
    ]
   },
   {
@@ -690,27 +687,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[o, n, e,  , ﻿, t, h, e,  , r, e, v, i, e, w, ...</td>\n",
+       "      <td>[one, ﻿the, reviewer, mentioned, watching, epi...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>[w, o, n, d, e, r, f, u, l,  , l, i, t, t, l, ...</td>\n",
+       "      <td>[wonderful, little, production, ﻿the, filming,...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[t, h, o, u, g, h, t,  , w, o, n, d, e, r, f, ...</td>\n",
+       "      <td>[thought, wonderful, way, spend, time, hot, su...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[b, a, s, i, c, a, l, l, y,  , f, a, m, i, l, ...</td>\n",
+       "      <td>[basically, family, little, boy, jake, think, ...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>[p, e, t, t, e, r,  , m, a, t, t, e, r, s,  , ...</td>\n",
+       "      <td>[petter, matter, love, ﻿the, time, money, visu...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -719,11 +716,11 @@
       ],
       "text/plain": [
        "                                              review sentiment\n",
-       "0  [o, n, e,  , ﻿, t, h, e,  , r, e, v, i, e, w, ...  positive\n",
-       "1  [w, o, n, d, e, r, f, u, l,  , l, i, t, t, l, ...  positive\n",
-       "2  [t, h, o, u, g, h, t,  , w, o, n, d, e, r, f, ...  positive\n",
-       "3  [b, a, s, i, c, a, l, l, y,  , f, a, m, i, l, ...  negative\n",
-       "4  [p, e, t, t, e, r,  , m, a, t, t, e, r, s,  , ...  positive"
+       "0  [one, ﻿the, reviewer, mentioned, watching, epi...  positive\n",
+       "1  [wonderful, little, production, ﻿the, filming,...  positive\n",
+       "2  [thought, wonderful, way, spend, time, hot, su...  positive\n",
+       "3  [basically, family, little, boy, jake, think, ...  negative\n",
+       "4  [petter, matter, love, ﻿the, time, money, visu...  positive"
       ]
      },
      "execution_count": 11,
@@ -746,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "71e44440",
+   "id": "6ee03bdd",
    "metadata": {},
    "outputs": [
     {
@@ -777,27 +774,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>o n e   ﻿ t h e   r e v i e w e r s   m e n t ...</td>\n",
+       "      <td>one ﻿the reviewer mentioned watching episode '...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>w o n d e r f u l   l i t t l e   p r o d u c ...</td>\n",
+       "      <td>wonderful little production ﻿the filming techn...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>t h o u g h t   w o n d e r f u l   w a y   s ...</td>\n",
+       "      <td>thought wonderful way spend time hot summer we...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>b a s i c a l l y   f a m i l y   l i t t l e ...</td>\n",
+       "      <td>basically family little boy jake think zombie ...</td>\n",
        "      <td>negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>p e t t e r   m a t t e r s   l o v e   ﻿ t h ...</td>\n",
+       "      <td>petter matter love ﻿the time money visually st...</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -806,11 +803,11 @@
       ],
       "text/plain": [
        "                                              review sentiment\n",
-       "0  o n e   ﻿ t h e   r e v i e w e r s   m e n t ...  positive\n",
-       "1  w o n d e r f u l   l i t t l e   p r o d u c ...  positive\n",
-       "2  t h o u g h t   w o n d e r f u l   w a y   s ...  positive\n",
-       "3  b a s i c a l l y   f a m i l y   l i t t l e ...  negative\n",
-       "4  p e t t e r   m a t t e r s   l o v e   ﻿ t h ...  positive"
+       "0  one ﻿the reviewer mentioned watching episode '...  positive\n",
+       "1  wonderful little production ﻿the filming techn...  positive\n",
+       "2  thought wonderful way spend time hot summer we...  positive\n",
+       "3  basically family little boy jake think zombie ...  negative\n",
+       "4  petter matter love ﻿the time money visually st...  positive"
       ]
      },
      "execution_count": 12,
@@ -833,8 +830,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "96d2bb69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words in corpus: 6499619\n",
+      "Total unique words: 134177\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Combine all reviews into one big string\n",
+    "all_text = \" \".join(df[\"review\"])\n",
+    "\n",
+    "# Split into words (basic split on whitespace)\n",
+    "all_words = all_text.split()\n",
+    "\n",
+    "# Count totals\n",
+    "total_words = len(all_words)\n",
+    "vocab_size = len(set(all_words))\n",
+    "\n",
+    "print(f\"Total words in corpus: {total_words}\")\n",
+    "print(f\"Total unique words: {vocab_size}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "751bd7d7",
+   "id": "43c27aeb",
+   "metadata": {},
+   "source": [
+    "# Problem - 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "68313fab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                              review  negative  positive\n",
+      "0  one ﻿the reviewer mentioned watching episode '...         0         1\n",
+      "1  wonderful little production ﻿the filming techn...         0         1\n",
+      "2  thought wonderful way spend time hot summer we...         0         1\n",
+      "3  basically family little boy jake think zombie ...         1         0\n",
+      "4  petter matter love ﻿the time money visually st...         0         1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# One-hot encode sentiment just for display\n",
+    "encoded_sentiment = pd.get_dummies(df[\"sentiment\"], dtype=int)\n",
+    "\n",
+    "# Combine with review column for display only\n",
+    "temp = pd.concat([df[\"review\"], encoded_sentiment], axis=1)\n",
+    "\n",
+    "# Show result\n",
+    "print(temp.head())\n",
+    "\n",
+    "# if we want to encode words from review, that’s bag-of-words or TF-IDF, not pure one-hot."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "776da810",
+   "metadata": {},
+   "source": [
+    "# Problem - 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4ca8341",
    "metadata": {},
    "source": []
   }
