4th, 5th and 6th problems done

--- a/NLP/txt_representation/representationn.ipynb
+++ b/NLP/txt_representation/representationn.ipynb
@@ -908,10 +908,166 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d4ca8341",
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "612930bf",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        word   count\n",
+      "0      movie  100607\n",
+      "1       film   90529\n",
+      "2       like   39860\n",
+      "3       time   29857\n",
+      "4       good   28753\n",
+      "5  character   27781\n",
+      "6      story   24252\n",
+      "7       make   23634\n",
+      "8     really   22935\n",
+      "9      scene   20822\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create Bag of Words with stopwords removed\n",
+    "vectorizer = CountVectorizer(stop_words='english')\n",
+    "X = vectorizer.fit_transform(df['review'])\n",
+    "\n",
+    "# Get vocabulary and word counts without converting to dense\n",
+    "word_counts = X.sum(axis=0).A1  # .A1 flattens sparse matrix to 1D array\n",
+    "vocab = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# Create DataFrame of word frequencies\n",
+    "vocab_df = pd.DataFrame({'word': vocab, 'count': word_counts})\n",
+    "vocab_df = vocab_df.sort_values(by='count', ascending=False).reset_index(drop=True)\n",
+    "\n",
+    "# Show top 10 words\n",
+    "print(vocab_df.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dfb3b5d",
+   "metadata": {},
+   "source": [
+    "# Problem - 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e14d49de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bigram vocabulary size: 2812585\n",
+      "Trigram vocabulary size: 4642245\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# Bag of Bigrams\n",
+    "vectorizer_bigram = CountVectorizer(ngram_range=(2, 2), stop_words='english')\n",
+    "X_bigram = vectorizer_bigram.fit_transform(df['review'])\n",
+    "bigram_vocab_size = len(vectorizer_bigram.get_feature_names_out())\n",
+    "\n",
+    "# Bag of Trigrams\n",
+    "vectorizer_trigram = CountVectorizer(ngram_range=(3, 3), stop_words='english')\n",
+    "X_trigram = vectorizer_trigram.fit_transform(df['review'])\n",
+    "trigram_vocab_size = len(vectorizer_trigram.get_feature_names_out())\n",
+    "\n",
+    "print(f\"Bigram vocabulary size: {bigram_vocab_size}\")\n",
+    "print(f\"Trigram vocabulary size: {trigram_vocab_size}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "710c96de",
+   "metadata": {},
+   "source": [
+    "**Observation on Dimensionality of the Vocabulary:**\n",
+    "\n",
+    "When moving from unigrams (single words) to bigrams (two-word combinations) and trigrams (three-word combinations), the vocabulary size increases drastically.\n",
+    "\n",
+    "* **Unigrams** only count unique words, so the vocabulary is relatively small (\\~hundreds of thousands).\n",
+    "* **Bigrams** create a new feature for every unique two-word sequence found in the text. This leads to a massive jump in dimensionality because almost every word can pair with many others in different contexts.\n",
+    "* **Trigrams** amplify this even more, since every unique three-word sequence becomes a separate feature, resulting in millions of possible combinations.\n",
+    "\n",
+    "This rapid growth in vocabulary size makes n-gram models more expressive but also much more memory-intensive, which can slow down processing and increase the risk of sparsity in the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80fad362",
+   "metadata": {},
+   "source": [
+    "# Problem - 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5e2c87d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 rarest words by IDF score:\n",
+      "                              word  idf_score\n",
+      "0  zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz  11.126651\n",
+      "1       aaaaaaaaaaaahhhhhhhhhhhhhh  11.126651\n",
+      "2                      aaaaaaaargh  11.126651\n",
+      "3                         aaaaaaah  11.126651\n",
+      "4                 aaaaaaahhhhhhggg  11.126651\n",
+      "5                          aaaaagh  11.126651\n",
+      "6                           aaaaah  11.126651\n",
+      "7                         zurlinis  11.126651\n",
+      "8                          zumhofe  11.126651\n",
+      "9                        zuluagain  11.126651\n",
+      "\n",
+      "Vocabulary size: 133959\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# Create TF-IDF vectorizer (removing English stopwords)\n",
+    "tfidf = TfidfVectorizer(stop_words='english')\n",
+    "\n",
+    "# Fit and transform review column\n",
+    "X_tfidf = tfidf.fit_transform(df['review'])\n",
+    "\n",
+    "# Get vocabulary (words) and their IDF scores\n",
+    "vocab = tfidf.get_feature_names_out()\n",
+    "idf_scores = tfidf.idf_\n",
+    "\n",
+    "# Create DataFrame with words and IDF scores\n",
+    "idf_df = pd.DataFrame({'word': vocab, 'idf_score': idf_scores})\n",
+    "\n",
+    "# Sort by highest IDF score (rarest words first)\n",
+    "idf_df = idf_df.sort_values(by='idf_score', ascending=False).reset_index(drop=True)\n",
+    "\n",
+    "# Display top 10 rarest words\n",
+    "print(\"Top 10 rarest words by IDF score:\")\n",
+    "print(idf_df.head(10))\n",
+    "\n",
+    "# Display vocabulary size\n",
+    "print(f\"\\nVocabulary size: {len(vocab)}\")"
+   ]
   }
  ],
  "metadata": {
