dropped id, keyword and location columns and only left with text and target

--- a/NLP Project/tweets.ipynb
+++ b/NLP Project/tweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7661d398",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5e076491",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "[7613 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ebb78cd0",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "[7613 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "3d35208d",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,258 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b67fadcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2594)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c7831b4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7608</th>\n",
+       "      <td>Two giant cranes holding a bridge collapse int...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7609</th>\n",
+       "      <td>@aria_ahrary @TheTawniest The out of control w...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7610</th>\n",
+       "      <td>M1.94 [01:04 UTC]?5km S of Volcano Hawaii. htt...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7611</th>\n",
+       "      <td>Police investigating after an e-bike collided ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7612</th>\n",
+       "      <td>The Latest: More Homes Razed by Northern Calif...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7613 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text  target\n",
+       "0     Our Deeds are the Reason of this #earthquake M...       1\n",
+       "1                Forest fire near La Ronge Sask. Canada       1\n",
+       "2     All residents asked to 'shelter in place' are ...       1\n",
+       "3     13,000 people receive #wildfires evacuation or...       1\n",
+       "4     Just got sent this photo from Ruby #Alaska as ...       1\n",
+       "...                                                 ...     ...\n",
+       "7608  Two giant cranes holding a bridge collapse int...       1\n",
+       "7609  @aria_ahrary @TheTawniest The out of control w...       1\n",
+       "7610  M1.94 [01:04 UTC]?5km S of Volcano Hawaii. htt...       1\n",
+       "7611  Police investigating after an e-bike collided ...       1\n",
+       "7612  The Latest: More Homes Razed by Northern Calif...       1\n",
+       "\n",
+       "[7613 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(['id','keyword','location'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6714fad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['id','keyword','location'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ff6aa26e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  target\n",
+       "0  Our Deeds are the Reason of this #earthquake M...       1\n",
+       "1             Forest fire near La Ronge Sask. Canada       1\n",
+       "2  All residents asked to 'shelter in place' are ...       1\n",
+       "3  13,000 people receive #wildfires evacuation or...       1\n",
+       "4  Just got sent this photo from Ruby #Alaska as ...       1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4dc0031d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "text      0\n",
+       "target    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,13 +613,15 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b67fadcd",
+   "id": "2e4b4e67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(2594)"
+       "text      object\n",
+       "target     int64\n",
+       "dtype: object"
       ]
      },
      "execution_count": 11,
@@ -377,8 +630,16 @@
     }
    ],
    "source": [
-    "df.isnull().sum().sum()"
+    "df.dtypes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3fe411f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
