--- a/NLP Project/tweets.ipynb
+++ b/NLP Project/tweets.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7ff98828",
+   "metadata": {},
+   "source": [
+    "## Data Loading and overview"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7661d398",
@@ -634,9 +642,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90516105",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3cceab6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Our Deeds are the Reason of this #earthquake M...\n",
+       "1                  Forest fire near La Ronge Sask. Canada\n",
+       "2       All residents asked to 'shelter in place' are ...\n",
+       "3       13,000 people receive #wildfires evacuation or...\n",
+       "4       Just got sent this photo from Ruby #Alaska as ...\n",
+       "                              ...                        \n",
+       "7608    Two giant cranes holding a bridge collapse int...\n",
+       "7609    @aria_ahrary @TheTawniest The out of control w...\n",
+       "7610    M1.94 [01:04 UTC]?5km S of Volcano Hawaii. htt...\n",
+       "7611    Police investigating after an e-bike collided ...\n",
+       "7612    The Latest: More Homes Razed by Northern Calif...\n",
+       "Name: text, Length: 7613, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['text']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3fe411f",
+   "id": "726dc30b",
    "metadata": {},
    "outputs": [],
    "source": []
